added relative position bias

--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,13 @@
 data/
 runs/
 dummy.py
-dummy.py
-lightning_logs/version_0/events.out.tfevents.1669903838.E005-PC2
-lightning_logs/version_0/hparams.yaml
-lightning_logs/version_0/checkpoints/epoch=49-step=1550.ckpt
-lightning_logs/version_1/events.out.tfevents.1669905188.E005-PC2
-lightning_logs/version_1/events.out.tfevents.1669986708.E005-PC2
-lightning_logs/version_1/events.out.tfevents.1669990280.E005-PC2
-lightning_logs/version_1/hparams.yaml
-lightning_logs/version_1/checkpoints/epoch=4-step=155-v1.ckpt
-lightning_logs/version_1/checkpoints/epoch=4-step=155.ckpt
-lightning_logs/version_1/checkpoints/epoch=49-step=1550.ckpt
-lightning_logs/version_2/events.out.tfevents.1669984463.E005-PC2
-lightning_logs/version_2/hparams.yaml
-lightning_logs/version_2/checkpoints/epoch=49-step=1550.ckpt
-models/__pycache__/__init__.cpython-39.pyc
-models/__pycache__/swin_transformer_block.cpython-39.pyc
-models/__pycache__/swinunetr.cpython-39.pyc
-models/__pycache__/unetblocks.cpython-39.pyc
-utils/__pycache__/data_loader.cpython-39.pyc
-utils/__pycache__/__init__.cpython-39.pyc
+lightning_logs/
+models/
+utils/__pycache__
 lightning_logs
 .gitignore
 dummy.py
 preprocessing.py
 server_runs
 work/
+__pycache__
