--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,18 @@
 data/
 runs/
 lightning_logs/
-server_runs/
-saved_models/
-notebook.ipynb
 models/__pycache__/
 utils/__pycache__/
+lightning_logs
 .gitignore
 dummy.py
+__pycache__/
+saved_models/
 test-trn-dwlpt/
 test-val-dwlpt/
+dummy.py
+__pycache__/
+run_everything.py
+notebook.ipynb
 presentation
 saved_metrics
-saved_models
-__pycache__
-notebook.ipynb
-run_everything.py
